.conflict-side-1/crates/but-api-macros/tests/tests/ui/fail/base_non_result_return.stderr
error: expected Result<T> or Result<T, E>
 --> tests/ui/fail/base_non_result_return.rs:9:20
  |
9 | fn not_result() -> i32 {
  |                    ^^^
